-Clearfix for content class, fixes some weird bugs related to collapsed content divs.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 
-
 .tile {
 	padding: 55px 30px;
 	text-align: center;
@@ -26,12 +25,16 @@
 	margin-bottom: -2px;
 }
 
-.md-object, .md-object:before, .md-object:after
-{
-    -webkit-box-sizing: content-box !important; 
-       -moz-box-sizing: content-box !important; 
-            box-sizing: content-box !important;  
+.md-object, .md-object:before, .md-object:after {
+	-webkit-box-sizing: content-box !important; 
+	-moz-box-sizing: content-box !important; 
+	box-sizing: content-box !important;  
 }
+
+.md-slide-wrap {
+	margin: 0 auto;
+}
+
 
 .tile i {
 	font-size: 110px;
@@ -84,6 +87,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .clearfix {
 	clear: both;
+}
+
+.content:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
 }
 
 header {
@@ -1168,7 +1179,6 @@ article hr {
 
 .content {
   margin-bottom: 20px;
-  overflow: hidden;
 }
 
 .content p {
